--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-  location.url = "https://cedarfair.articulate-online.com";
+  location.href = "https://cedarfair.articulate-online.com";
 </script>
