--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
-<script>
-  location.href = "https://cedarfair.articulate-online.com";
-</script>
+<!doctype html>
+<html>
+  <body>
+    <h1>Click a link to get started:</h1>
+    <hr>
+    <p>
+      <ul>
+        <li>
+          <a href="https://youtube.com">Youtube</a>
+        </li>
+        <li>
+          <a href="https://google.com">Google</a>
+        </li>
+      </ul>
+    </p>
+  </body>
+</html>  
